# 13301338176-ml

./: .gitignore  Introduction_to_computational_graph_autograd.ipynb
Android-Studio-Tips-by-Philippe-Breault/: apk_always
Audio-set/: expert-url  practice-pyaudio.url
Audio-set/AnatomyOfMatplotlib/: categorical_variables.py  my_axiis.py  my_example.py  my_meshgridi_colorbar.py  seaborn_category.py  spectrum_demo.py  url
Audio-set/Sensors-data-process-my-adding/: cblas.cpp  file.mat  pre-process.ipynb  process.py  sensor.py  url  yeild-states-mode.py
Audio-set/pyAudioAnalysis/: url
Audio-set/youtube-8m-reviion-panteleev-features-extract/: train.py
C++-meta-program/Meta-DNN/: url
C++-meta-program/books/: c++11改进我们的模式之改进命令模式  如何记忆UML类图的画法
C++-meta-program/stroustrup_ppp/: url
Conflunce/: 12 things you didn’t know about the Confluence editor   Confluence: Content reuse  Conflunce_usage  Moving a Page  nest pages in a hierarchy within each space. From any page in Confluence, when you select the blue Create button in the heade
Data_Synchronization/: Generating C Code from Your MATLAB Algorithms  logisticRegression  逻辑回归(Logistic Regression)简介及C++实现 
Data_Synchronization/AccSensingDemo/: local.properties
Data_Synchronization/ActIdentification1/: import-summary.txt  local.properties
Data_Synchronization/CommBox-Cricket-shot-Identification-and-Commentary-Generation-using-Sensors/: url
Data_Synchronization/DemoDataManager/: import-summary.txt  local.properties  settings.gradle  url
Data_Synchronization/HARAndroid/: README.md  url
Data_Synchronization/HumanCenteredMultimedia/: url
Data_Synchronization/LifeLog_android/: import-summary.txt  local.properties
Data_Synchronization/Sensor-Classification-Android-weka1/: import-summary.txt  local.properties
Data_Synchronization/SensorML/: url
Data_Synchronization/SitStandDetector/: local.properties
Data_Synchronization/US-TransportationMode/: url
Data_Synchronization/android-sensor-data-recorder-upload/: build.gradle
Data_Synchronization/androidKNN/: .classpath  .project  README.md
Data_Synchronization/machinelearning-opencv/: README.markdown  machinelearning.rst
Data_Synchronization/online-random-forest-weka/: online-random-forest-b190117.jarr
Data_Synchronization/transportation-mode-detection/: url
Data_Synchronization/weka-android/: CreateInstances.java  svn.url
Data_Synchronization/weka-android-javaml/: step
Data_Synchronization/wiki-sensor_fusion/: Sensor fusion-pivotTable
Industry/sysml/: url
NLP-NLU/: chinese-url  corpus.mm  corpus.mm.index  gsim-chinese.py  mydict.dic
NLP-NLU/example1/: utf8.py
NLP-NLU/gensim/: config.py  step-1.py  step-1.py~
NLP-NLU/sohu/: callgrind.out.6170  corpusSegDone.txt  step1-Jieba.py
NLP-NLU/tf-chinese-seq2seq/: preprocessing.py
Python_C++_caffe-tfskills-android/call-graph-valgrind/: callgraph.dot  callgrind.out.6326  callgrind.out.6340  test.cpp  test1.py  valgrind
Python_C++_caffe-tfskills-android/cmake-gtest-pytest-ninja-android/projects-googletest_android_ndk-build/algo/: CMakeLists.txt  algo.cpp  algo.h  commons.h  testalgo.cpp
Python_C++_caffe-tfskills-android/cmake-gtest-pytest-ninja-android/ros-cross-compile/ros/my-task-code/20160712-PC/20160712-PC/20160712-PC/tele-op/src/robot_status/: CMakeLists.txt  Ui_status.py  global_vars.py  lu-ban_status.e4p  package.xml  status.py  status.ui
Python_C++_caffe-tfskills-android/cmake-gtest-pytest-ninja-android/ros-cross-compile/ros/my-task-code/20160712-PC/20160712-PC/20160712-PC/tele-op/src/robot_status/.eric4project/: luban-staus.e4q  luban-staus.e4t
Python_C++_caffe-tfskills-android/cmake-gtest-pytest-ninja-android/ros-cross-compile/ros/ros-less-clear/src/INTERFACE/lib/: CMakeLists.txt  INTERFACE_QROBOT_H.cpp  INTERFACE_QROBOT_H.hpp
Python_C++_caffe-tfskills-android/cmake-gtest-pytest-ninja-android/ros-cross-compile/ros/ros-less-clear/src/INTERFACE/lib/test_as_customer/: customer.cpp
Python_C++_caffe-tfskills-android/cmake-gtest-pytest-ninja-android/ros-cross-compile/ros/ros-less-clear/src/MASTER/: CMakeLists.txt  master-mv-qrobot-onefile.cpp
TensorFlow-Books/: TensorFlow社区  apple.url  tf_simple-BN-moment.py
TensorFlow-Books/Android_Integration_first_APK/: url
TensorFlow-Books/DeepFaceAndroid/: url  url~
TensorFlow-Books/E2E_delpoy_train_android/: icoud
TensorFlow-Books/handson-ml-master/: tools_pandas.ipynb
TensorFlow-Books/keras/: pandas-join.py
android3rd/: url
android3rd/BusApplication/: url
android3rd/all-one/: local.properties  settings.gradle
bandit-rl-good-pip-apt/: demo.py  demo.spec  readme-pip-apt-skill  readme~
boilerplate-code-awesome-idiom/agera.wiki/: Compiled-repositories.md  Observables-and-updatables.md  Reactive-programming.md  Reservoirs-and-parallelism.md
boilerplate-code-awesome-idiom/design_pattern/: Software_design_pattern-wiki  sourcemaker
boilerplate-code-awesome/agera.wiki/: Compiled-functions.md  Custom-observables.md  Home.md  Incrementally-Agerifying-legacy-code.md  Repositories.md  _Sidebar.md
boilerplate-code-awesome/jni/: JNIDemo.c  JNIDemo.h  JNIDemo.java  mylog
dive-into-machine-learning/books/: url
experts/: download.url  fitness-git
experts/jasonBrownlee/: wget.url.txt
github/: git-lfs-url  url
kaggle/Kaggle_Titanic/: Titanic.ipynb  group_by.py  group_by.py~  logistic_regression_predictions2.csv
ml_features_selection/: pd_dummy.py  url
optimaztion_FSM_algos/: .~lock.cs638-16.ppt#
python-TF-code/: TF_zhj.ipynb  graph.pb  optimized_graph.pb
python-TF-code/.ipynb_checkpoints/: TF_zhj-checkpoint.ipynb
python_ML_books/python-3.6.4-docs-html/: about.html  bugs.html  contents.html  copyright.html  download.html  genindex-A.html  genindex-B.html  genindex-C.html  genindex-D.html  genindex-E.html  genindex-F.html  genindex-G.html  genindex-H.html  genindex-I.html  genindex-J.html  genindex-K.html  genindex-L.html  genindex-M.html  genindex-N.html  genindex-O.html  genindex-P.html  genindex-Q.html  genindex-R.html  genindex-S.html  genindex-Symbols.html  genindex-T.html  genindex-U.html  (+15 more)
pytorch/: install-cpu.sh
(+957 files in other folders)
