<?xml version="1.0"?>
<package>
  <name>robot_status</name>
  <version>0.6.0</version>
  <description>   .</description>

  <maintainer email="haijunz@qti.qualcomm.com">haijunz</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/</url>

  <author>haijunz </author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
